Replace translated configs in place and create a properties file