@@ -1,14 +1,12 @@
 package org.smartregister.util;
 
-import com.google.common.collect.ImmutableSet;
-
 import java.util.Set;
 
 public class FCTConstants {
-  public static final Set questionnaireTranslatables =
-    ImmutableSet.of(
+  public static final Set<String> questionnaireTranslatables =
+    Set.of(
       "text", "display");
-  public static final Set configTranslatables =
-    ImmutableSet.of(
+  public static final Set<String> configTranslatables =
+    Set.of(
       "saveButtonText", "title", "display", "actionButtonText", "message");
 }
